--- a/src/app/components/records/records.component.html
+++ b/src/app/components/records/records.component.html
@@ -24,7 +24,7 @@
 
     <button class="search" mat-raised-button (click)="search()">{{'btnTitle.sBtn' | translate}}</button>
 
-    <button class="count" mat-raised-button>{{'btnTitle.countBtn' | translate}}</button>
+    <button class="count" mat-raised-button (click)="count()">{{'btnTitle.countBtn' | translate}}</button>
   </form>
 </div>
 
