--- a/src/app/components/dialogs/add-dialog/add-dialog.component.html
+++ b/src/app/components/dialogs/add-dialog/add-dialog.component.html
@@ -108,6 +108,6 @@
       {{'dialogTitle.btnSave' | translate}}
     </button>
 
-    <button mat-button mat-dialog-close="">{{'dialogTitle.btnCancel' | translate}}</button>
+    <button mat-button [mat-dialog-close]="-1">{{'dialogTitle.btnCancel' | translate}}</button>
   </div>
 </div>
