--- a/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
+++ b/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
@@ -101,7 +101,7 @@
           {{'dialogTitle.btnUpdate' | translate}}
         </button>
 
-        <button class="mat-raised-button" mat-button mat-dialog-close="">
+        <button class="mat-raised-button" mat-button [mat-dialog-close]="-1">
           {{'dialogTitle.btnCancel' | translate}}
         </button>
       </div>
