--- a/src/app/components/dialogs/count-dialog/count-dialog.component.html
+++ b/src/app/components/dialogs/count-dialog/count-dialog.component.html
@@ -1,22 +1,26 @@
 <div>
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100" id="table" matSort>
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100" id="table">
 
-    <ng-container matColumnDef="firstName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header="">{{'empHead.fName' | translate}}</mat-header-cell>
-      <mat-cell *matCellDef="let rec">{{rec.firstName}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="firstName">
+        <mat-header-cell *matHeaderCellDef>{{'empHead.fName' | translate}}</mat-header-cell>
+        <mat-cell *matCellDef="let rec">{{rec.firstName}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="lastName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header="">{{'empHead.lName' | translate}}</mat-header-cell>
-      <mat-cell *matCellDef="let rec">{{rec.lastName}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="lastName">
+        <mat-header-cell *matHeaderCellDef>{{'empHead.lName' | translate}}</mat-header-cell>
+        <mat-cell *matCellDef="let rec">{{rec.lastName}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="time">
-      <mat-header-cell *matHeaderCellDef mat-sort-header="">Hours</mat-header-cell>
-      <mat-cell *matCellDef="let rec">{{rec.time | date}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="time">
+        <mat-header-cell *matHeaderCellDef>Hours</mat-header-cell>
+        <mat-cell *matCellDef="let rec">{{rec.time}}</mat-cell>
+      </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+  <mat-dialog-actions>
+    <button mat-raised-button [mat-dialog-close]="-1">Close</button>
+  </mat-dialog-actions>
 </div>
