--- a/src/app/components/dialogs/count-dialog/count-dialog.component.html
+++ b/src/app/components/dialogs/count-dialog/count-dialog.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container mat-elevation-z8">
     <mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100" id="table">
 
       <ng-container matColumnDef="firstName">
