--- a/src/app/components/dialogs/add-dialog/add-dialog.component.html
+++ b/src/app/components/dialogs/add-dialog/add-dialog.component.html
@@ -32,7 +32,7 @@
             <mat-form-field appearance="fill">
               <mat-label>{{'empHead.bDay' | translate}}</mat-label>
               <input matInput min="minDate" max="maxDate" [matDatepicker]="picker" formControlName="dateOfBirth">
-              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-hint>MMMM DD, YYYY</mat-hint>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
 
@@ -108,6 +108,6 @@
       {{'dialogTitle.btnSave' | translate}}
     </button>
 
-    <button mat-button [mat-dialog-close]="-1">{{'dialogTitle.btnCancel' | translate}}</button>
+    <button mat-button [mat-dialog-close]="-1" (click)="close()">{{'dialogTitle.btnCancel' | translate}}</button>
   </div>
 </div>
