--- a/src/app/components/employee-list/employee-list.component.css
+++ b/src/app/components/employee-list/employee-list.component.css
@@ -1,8 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
 .form {
   min-height: 56px;
   max-height: 56px;
@@ -14,40 +9,30 @@
   border-bottom: 1px solid transparent;
 }
 
-.mat-form-field {
+mat-form-field {
   font-size: 14px;
   flex-grow: 1;
   margin-top: 8px;
 }
 
-.no-results {
-  display: flex;
-  justify-content: center;
-  padding: 14px;
-  font-size: 14px;
-  font-style: italic;
-}
-
-.mat-cell:nth-child(1),
-.mat-header-cell:nth-child(1){
-  flex: 0 0 6%;
-}
-
-.mat-cell:nth-child(2),
-.mat-header-cell:nth-child(2){
-  flex: 0 0 30%;
-}
-
-.mat-cell:nth-child(3),
-.mat-header-cell:nth-child(3){
-  flex: 0 0 6%;
-}
-
-.mat-cell:nth-child(7),
-.mat-header-cell:nth-child(7){
-  flex: 0 0 7%;
-}
-
-.download{
+.download {
   margin-left: 40px
+}
+
+mat-cell {
+  padding: 10px;
+}
+
+mat-header-cell {
+  background: whitesmoke;
+}
+
+mat-table {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.container{
+  width: 90%;
+  margin: auto;
+  padding: 10px;
 }
