--- a/src/app/components/global-tabs/global-tabs.component.html
+++ b/src/app/components/global-tabs/global-tabs.component.html
@@ -1,11 +1,13 @@
 <div>
-  <app-lang></app-lang>
+  <div class="lang">
+    <app-lang></app-lang>
+  </div>
   <div>
-    <mat-tab-group animationDuration="200ms">
-      <mat-tab label="{{'label.emp' | translate}}">
+    <mat-tab-group animationDuration="200ms" class="mat-tab-group">
+      <mat-tab class="mat-tab-label" label="{{'label.emp' | translate}}">
         <app-employee-list></app-employee-list>
       </mat-tab>
-      <mat-tab label="{{'label.recs' | translate}}">
+      <mat-tab class="mat-tab-label" label="{{'label.recs' | translate}}">
         <app-records></app-records>
       </mat-tab>
     </mat-tab-group>
