--- a/src/app/components/lang/lang.component.html
+++ b/src/app/components/lang/lang.component.html
@@ -1,7 +1,6 @@
-<nav class="container mb-1 mt-1">
-  <div class="row">
-    <div class="col-9"></div>
-    <div class="col-3">
+<nav class="navbar">
+  <div>
+    <div>
       <select id="langs" class="select" (change)="changeSiteLanguage($any($event.target).value)">
         <option value="en">English</option>
         <option value="hy">Հայերեն</option>
