--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,8 +15,7 @@
         </mat-form-field>
       </div>
       <div class="button">
-        <button type="submit" mat-raised-button color="primary">Login</button>
-        <button mat-button mat-dialog-close="-1">Close</button>
+        <button type="submit" mat-raised-button color="accent">Login</button>
       </div>
     </form>
   </mat-card-content>
