--- a/src/app/components/global-tabs/global-tabs.component.css
+++ b/src/app/components/global-tabs/global-tabs.component.css
@@ -1,6 +1,6 @@
 .mat-tab-list .mat-tab-labels .mat-tab-label-active {
   color:white;
-  background-color: red;
+  background-color: blue;
 }
 
 .mat-tab-list .mat-tab-labels {
