--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="flex-container">
-    <button mat-button class="nav-link" routerLink="/login">{{'navBarItem.login' | translate}}</button>
-    <button mat-button *ngIf="isLoggedIn">{{'navBarItem.logout' | translate}}</button>
+    <button mat-button *ngIf="!authService.isLoggedIn()" routerLink="/login">{{'navBarItem.login' | translate}}</button>
+    <button mat-button *ngIf="authService.isLoggedIn()" (click)="logOut()">{{'navBarItem.logout' | translate}}</button>
     <app-lang></app-lang>
   </div>
 </nav>
