--- a/src/app/components/records/records.component.html
+++ b/src/app/components/records/records.component.html
@@ -28,6 +28,8 @@
       <button class="search" mat-raised-button (click)="search()">{{'btnTitle.sBtn' | translate}}</button>
 
       <button class="count" mat-raised-button (click)="count()">{{'btnTitle.countBtn' | translate}}</button>
+
+      <button class="reset" mat-raised-button (click)="reset()">{{'btnTitle.resetBtn' | translate}}</button>
     </form>
   </div>
 
